# realsense_sift

./: .gitignore  CMakeLists.txt  mrun.sh  readme.md  run.sh
apps/: all_data.cpp  helloworld.cpp  rs-imshow copy.cpp  rs-imshow.cpp
